--- a/src/01-保存视频帧画面.ipynb
+++ b/src/01-保存视频帧画面.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1b323ea5-219d-4103-83d6-81f9eb7f9c14",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,12 @@
     "import sys\n",
     "sys.path.append('/media/gpt4-pdf-chatbot-langchain/Keyframe-Extraction-for-video-summarization/src')\n",
     "\n",
-    "from Scripts.save_keyframe import save_frames\n"
+    "from scripts.save_keyframe import save_frames\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "e0ab0199-9da0-4735-aa5f-08a781ab6562",
    "metadata": {},
    "outputs": [
@@ -23,13 +23,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 119), (120, 307), (308, 454), (455, 877), (878, 1281), (1282, 1388), (1389, 1598)]\n"
+      "[(0, 208)]\n"
      ]
     }
    ],
    "source": [
     "# 打开文件并读取内容\n",
-    "with open('/home/dmeck/Downloads/兔兔没有牙.mp4.scenes.txt', 'r') as file:\n",
+    "with open('/media/checkpoint/speech_data/抖音作品/ieDRHjmD/ieDRHjmD.mp4.scenes.txt', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# 初始化一个空的Python数组\n",
@@ -49,21 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "5ac0d74f-465d-44fc-984e-d209c0be9c3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "keyframe_indexes = [item[0] for item in result]\n",
-    "video_path='/home/dmeck/Downloads/兔兔没有牙.mp4'\n",
-    "save_path = '/home/dmeck/Downloads/'\n",
-    "folder_name='兔兔没有牙'\n",
+    "video_path='/media/checkpoint/speech_data/抖音作品/ieDRHjmD/ieDRHjmD.mp4'\n",
+    "save_path = '/media/checkpoint/speech_data/抖音作品/ieDRHjmD/'\n",
+    "folder_name='keyframe'\n",
     "save_frames(keyframe_indexes=keyframe_indexes,video_path=video_path,save_path=save_path,folder_name=folder_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "d901d09e-5c25-485a-a1c0-94c0422cde42",
    "metadata": {},
    "outputs": [],
@@ -73,13 +73,12 @@
     "\n",
     "keyframe_all_indexes = []\n",
     "\n",
-    "for start, end in input_ranges:\n",
+    "for start, end in result:\n",
     "    keyframe_all_indexes.extend(range(start, end + 1))\n",
     "\n",
     "\n",
-    "video_path='/home/dmeck/Downloads/兔兔没有牙.mp4'\n",
-    "save_path = '/home/dmeck/Downloads/'\n",
-    "folder_name='兔兔没有牙-features'\n",
+    "\n",
+    "folder_name='keyframe-features'\n",
     "save_frames(keyframe_indexes=keyframe_all_indexes,video_path=video_path,save_path=save_path,folder_name=folder_name)"
    ]
   },
