--- a/src/02-视频帧特征提取.ipynb
+++ b/src/02-视频帧特征提取.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "66de15ca-27b6-4fda-a331-598326888a65",
    "metadata": {},
    "outputs": [
@@ -52,16 +52,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-11 03:47:51,854 - modelscope - INFO - initiate model from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh\n",
-      "2023-09-11 03:47:51,854 - modelscope - INFO - initiate model from location /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh.\n",
-      "2023-09-11 03:47:51,855 - modelscope - INFO - initialize model from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh\n",
-      "2023-09-11 03:47:51,856 - modelscope - INFO - Loading vision model config from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh/vision_model_config.json\n",
-      "2023-09-11 03:47:51,856 - modelscope - INFO - Loading text model config from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh/text_model_config.json\n",
-      "2023-09-11 03:47:54,437 - modelscope - INFO - Use GPU 0 for finetuning & inference\n",
-      "2023-09-11 03:47:54,446 - modelscope - WARNING - No preprocessor field found in cfg.\n",
-      "2023-09-11 03:47:54,446 - modelscope - WARNING - No val key and type key found in preprocessor domain of configuration.json file.\n",
-      "2023-09-11 03:47:54,447 - modelscope - WARNING - Cannot find available config to build preprocessor at mode inference, current config: {'model_dir': '/media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh'}. trying to build by task and model information.\n",
-      "2023-09-11 03:47:54,447 - modelscope - WARNING - No preprocessor key ('clip-multi-modal-embedding', 'multi-modal-embedding') found in PREPROCESSOR_MAP, skip building preprocessor.\n"
+      "2023-09-11 22:48:17,583 - modelscope - INFO - PyTorch version 2.0.1 Found.\n",
+      "2023-09-11 22:48:17,586 - modelscope - INFO - TensorFlow version 2.10.0 Found.\n",
+      "2023-09-11 22:48:17,586 - modelscope - INFO - Loading ast index from /home/dmeck/.cache/modelscope/ast_indexer\n",
+      "2023-09-11 22:48:17,661 - modelscope - INFO - Loading done! Current index file version is 1.9.0, with md5 e74c3ad0d32f5b2c017304f8c2d8a5f8 and a total number of 921 components indexed\n",
+      "/media/gpt4-pdf-chatbot-langchain/pyenv-video/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2023-09-11 22:48:19.108475: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-09-11 22:48:19.241121: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-09-11 22:48:19.672886: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /media/gpt4-pdf-chatbot-langchain/pyenv-video/lib/python3.9/site-packages/cv2/../../lib64::/opt/cuda/lib64:/opt/cuda/lib64\n",
+      "2023-09-11 22:48:19.672958: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /media/gpt4-pdf-chatbot-langchain/pyenv-video/lib/python3.9/site-packages/cv2/../../lib64::/opt/cuda/lib64:/opt/cuda/lib64\n",
+      "2023-09-11 22:48:19.672964: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-09-11 22:48:20 | INFO | fairseq.tasks.text_to_speech | Please install tensorboardX: pip install tensorboardX\n",
+      "2023-09-11 22:48:20 | INFO | torch.distributed.nn.jit.instantiator | Created a temporary directory at /tmp/tmpfpfrpjft\n",
+      "2023-09-11 22:48:20 | INFO | torch.distributed.nn.jit.instantiator | Writing /tmp/tmpfpfrpjft/_remote_module_non_scriptable.py\n",
+      "2023-09-11 22:48:20,782 - modelscope - INFO - initiate model from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh\n",
+      "2023-09-11 22:48:20,783 - modelscope - INFO - initiate model from location /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh.\n",
+      "2023-09-11 22:48:20,783 - modelscope - INFO - initialize model from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh\n",
+      "2023-09-11 22:48:20,784 - modelscope - INFO - Loading vision model config from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh/vision_model_config.json\n",
+      "2023-09-11 22:48:20,785 - modelscope - INFO - Loading text model config from /media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh/text_model_config.json\n",
+      "2023-09-11 22:48:37,932 - modelscope - INFO - Use GPU 0 for finetuning & inference\n",
+      "2023-09-11 22:48:37,934 - modelscope - WARNING - No preprocessor field found in cfg.\n",
+      "2023-09-11 22:48:37,934 - modelscope - WARNING - No val key and type key found in preprocessor domain of configuration.json file.\n",
+      "2023-09-11 22:48:37,934 - modelscope - WARNING - Cannot find available config to build preprocessor at mode inference, current config: {'model_dir': '/media/checkpoint/multi-modal_clip-vit-large-patch14_336_zh/damo/multi-modal_clip-vit-large-patch14_336_zh'}. trying to build by task and model information.\n",
+      "2023-09-11 22:48:37,935 - modelscope - WARNING - No preprocessor key ('clip-multi-modal-embedding', 'multi-modal-embedding') found in PREPROCESSOR_MAP, skip building preprocessor.\n"
      ]
     }
    ],
@@ -82,40 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "eeed44da-cf3b-4eac-9897-d6cbec563fc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "图文匹配概率: [[0.007717 0.2637   0.717    0.01177 ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_img = load_image('/home/dmeck/Downloads/兔兔没有牙/0.jpg') # 支持皮卡丘示例图片路径/本地图片 返回PIL.Image\n",
-    "input_texts = [\"女人\", \"拍照\", \"镜子\", \"横幅\"]\n",
-    "# 支持一张图片(PIL.Image)或多张图片(List[PIL.Image])输入，输出归一化特征向量\n",
-    "img_embedding = pipeline.forward({'img': input_img})['img_embedding'] # 2D Tensor, [图片数, 特征维度]\n",
-    "\n",
-    "# 支持一条文本(str)或多条文本(List[str])输入，输出归一化特征向量\n",
-    "text_embedding = pipeline.forward({'text': input_texts})['text_embedding'] # 2D Tensor, [文本数, 特征维度]\n",
-    "\n",
-    "# 计算图文相似度\n",
-    "with torch.no_grad():\n",
-    "    # 计算内积得到logit，考虑模型temperature\n",
-    "    logits_per_image = (img_embedding / pipeline.model.temperature) @ text_embedding.t()\n",
-    "    # 根据logit计算概率分布\n",
-    "    probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
-    "\n",
-    "print(\"图文匹配概率:\", probs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "6c37e9bd-e04a-4b04-a881-26f3e92e5ed4",
    "metadata": {},
    "outputs": [],
@@ -142,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "cc53525d-0ee9-4c0c-ba0a-b37a9e9c2b8e",
    "metadata": {},
    "outputs": [
@@ -155,7 +137,7 @@
     }
    ],
    "source": [
-    "data_folder = '/home/dmeck/Downloads/兔兔没有牙-features'\n",
+    "data_folder = '/media/checkpoint/speech_data/抖音作品/ieAeWyXU/keyframe-features'\n",
     "\n",
     "jpg_files=load_jpg(data_folder) \n",
     "print(\"获取数据，成功{}\".format(len(jpg_files)))\n"
@@ -163,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "981adb8e-7b19-49c9-95cd-816c05732bf5",
    "metadata": {},
    "outputs": [
@@ -171,8 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|███▊                                                                                                            | 54/1599 [00:03<01:30, 17.09it/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████▊| 1596/1599 [00:33<00:00, 48.69it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1599/1599 [00:33<00:00, 47.19it/s]\n"
      ]
     },
     {
@@ -181,13 +162,6 @@
      "text": [
       "(1599, 768)\n",
       "(1599, 768)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1599/1599 [00:52<00:00, 48.69it/s]"
      ]
     }
    ],
