--- a/src/04-1-批量处理字幕操作.ipynb
+++ b/src/04-1-批量处理字幕操作.ipynb
@@ -520,7 +520,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "318d477d-f1ca-4481-83c6-ac32361ba3cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
