Refactor split_video function to use smaller default dimensions

--- a/src/07-生成hf数据集.ipynb
+++ b/src/07-生成hf数据集.ipynb
@@ -97,16 +97,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d40bde67-c72c-4a90-b373-32dae1636f03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "\n",
+    "\n",
+    "def read_fps(video_path:str):\n",
+    "    # 打开视频文件\n",
+    "    video_capture = cv2.VideoCapture(video_path)\n",
+    "    \n",
+    "    # 获取视频的帧速率\n",
+    "    fps = int(video_capture.get(cv2.CAP_PROP_FPS))\n",
+    "     \n",
+    "    # 释放视频捕获对象\n",
+    "    video_capture.release()\n",
+    "    \n",
+    "    # 关闭视频文件\n",
+    "    cv2.destroyAllWindows()\n",
+    "    return fps\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "92a13a27-9861-4868-bccf-13802e35c58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "video_path=f'/mnt/ceph/develop/jiawei/lora_dataset/speech_data/猫和老鼠/test_1/scene_chunks/videos/chunk_3854_3.mp4'\n",
+    "\n",
+    "fps = read_fps(video_path)\n",
+    "\n",
+    "fps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c82c689-9353-4840-9aa2-6012af26e85d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "video_path=f'/mnt/ceph/develop/jiawei/lora_dataset/speech_data/猫和老鼠/test_1/scene_chunks/videos/rife_chunk_3854_3.mp4'\n",
+    "\n",
+    "fps = read_fps(video_path)\n",
+    "\n",
+    "fps"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a13a27-9861-4868-bccf-13802e35c58b",
+   "id": "bc617e73-7cce-4e12-9e64-0eb0f67fa757",
    "metadata": {},
    "outputs": [],
    "source": []
