--- a/src/08-生成sat数据集.ipynb
+++ b/src/08-生成sat数据集.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f497af05-5ad0-45ad-932b-3a9c43c58151",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1b429201-eb5f-4dc3-86a7-ab8a2243e104",
    "metadata": {},
    "outputs": [
@@ -75,18 +75,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_sat_tom_jerry_lora_dataset/videos is not exist\n",
-      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_sat_tom_jerry_lora_dataset/videos\n",
-      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_sat_tom_jerry_lora_dataset/labels is not exist\n",
-      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_sat_tom_jerry_lora_dataset/labels\n"
+      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/videos is not exist\n",
+      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/videos\n",
+      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/labels is not exist\n",
+      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/labels\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "dir_put = '/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_sat_tom_jerry_lora_dataset'\n",
-    "root_path = '/mnt/ceph/develop/jiawei/lora_dataset/speech_data/猫和老鼠/'\n",
+    "dir_put = '/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset'\n",
+    "root_path = '/mnt/ceph/develop/jiawei/lora_dataset/speech_data/B站/'\n",
     "for root, dirs, files in os.walk(root_path):\n",
     "    # 如果你只想获取下一层的子目录，可以在这里筛选\n",
     "    if root == root_path:\n",
