--- a/src/08-生成sat数据集.ipynb
+++ b/src/08-生成sat数据集.ipynb
@@ -75,18 +75,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/videos is not exist\n",
-      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/videos\n",
-      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/labels is not exist\n",
-      "create folder /mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset/labels\n"
+      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/lora_dataset_test_tom_and_jerry/videos is not exist\n",
+      "create folder /mnt/ceph/develop/jiawei/lora_dataset/lora_dataset_test_tom_and_jerry/videos\n",
+      "warning: the folder/mnt/ceph/develop/jiawei/lora_dataset/lora_dataset_test_tom_and_jerry/labels is not exist\n",
+      "create folder /mnt/ceph/develop/jiawei/lora_dataset/lora_dataset_test_tom_and_jerry/labels\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "dir_put = '/mnt/ceph/develop/jiawei/lora_dataset/cogvideox_blibli_lora_dataset'\n",
-    "root_path = '/mnt/ceph/develop/jiawei/lora_dataset/speech_data/B站/'\n",
+    "dir_put = '/mnt/ceph/develop/jiawei/lora_dataset/lora_dataset_test_tom_and_jerry'\n",
+    "root_path = '/mnt/ceph/develop/jiawei/lora_dataset/speech_data/猫和老鼠_只有人物/'\n",
     "for root, dirs, files in os.walk(root_path):\n",
     "    # 如果你只想获取下一层的子目录，可以在这里筛选\n",
     "    if root == root_path:\n",
